--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,9 @@ body {
 }
 
 .headline {
-  position: absolute;
+  position: relative;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: url("header-illsutration-mobile.svg") no-repeat;
   background-size: 100% 100%;
   display: flex;
@@ -51,7 +51,7 @@ body {
   flex-direction: column;
   width: 85%;
   height: 192px;
-  flex: 2;
+  flex: 2 1 480px;
   justify-content: center;
 }
 
@@ -92,6 +92,7 @@ li {
   width: 60%;
   display: flex;
   align-items: flex-start;
+  margin-bottom: 30px;
 }
 
 #div-links ul {
@@ -118,3 +119,227 @@ li {
   color: #fff;
   background-color: #505f79;
 }
+
+.works-grid {
+  position: relative;
+  display: grid;
+  height: 480vh;
+  width: 100%;
+  max-height: 2910px;
+  grid-template-columns: 85%;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  justify-content: center;
+  row-gap: 10px;
+  margin-top: 0;
+}
+
+.h3-works {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  text-align: center;
+  color: #172B4D;
+  margin-bottom: 20px;
+}
+
+.work-hr {
+  width: 48px;
+  height: 4px;
+  background: #36B37E;
+  border-radius: 24px;
+  margin-bottom: 62px;
+}
+
+.grid-item {
+  border: 0.5px solid rgba(0, 0, 0, 0.3);
+  border-radius: 8px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 474px;
+  max-width: 327px;
+}
+
+.img-holder {
+  width: 100%;
+  height: 53%;
+  background: #EBF0EE;
+}
+
+.text3 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+  margin-bottom: 0;
+  color: #3A4A42;
+}
+.cate {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+  padding: 0;
+  text-align: center;
+  width: 100%;
+}
+
+.cate li{
+  border-radius: 4px;
+  background-color: #EBF0EE;
+  padding: 8px 16px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #3A4A42;
+}
+
+.button-flex {
+  background: #36B37F;
+  color: #fff;
+  width: 122px;
+  height: 48px;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  border-radius: 4px;
+  border: none;
+  margin-top: 10px;
+}
+
+.about-me {
+  position: relative;
+  width: 90%;
+  max-width: 400px;
+  height: 70vh;
+  max-height: 300px;
+  margin: 0 auto;
+  margin-bottom: 140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.il-about {
+  position: relative;
+  display: inline;
+  z-index: -1;
+}
+
+.il-1-a {
+  left: 40vw;
+  top: 40%;
+}
+
+.il-2-a {
+  top: 100%;
+  left: -40vw;
+}
+
+.h2-about {
+  display: block;
+  font-family: 'Inter',sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  text-align: center;
+  color: #172B4D;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  flex: none;
+}
+
+.p-about {
+  font-family: 'Inter',sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  color: #42526E;
+  margin-bottom: 10px;
+  flex: none;
+}
+
+.button-about{
+  width: 159px;
+  height: 48px;
+  background: #36B37F;
+  border-radius: 4px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+  border: none;
+  flex: none;
+  margin-top: 20px;
+}
+
+.about-me-grid {
+  display: grid;
+  width: 100%;
+  height: 1100px;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 85%;
+  margin-top: 30px;
+  justify-content: center;
+  row-gap: 20px;
+  margin-bottom: 20px;
+}
+
+.grid-item-about {
+  width: 327px;
+  height: 352px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #EBF0EE;
+  border-radius: 8px;
+}
+
+.text3-about {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+  color: #344563;
+}
+
+.list-about {
+  display: flex;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.list-about li{
+  color: #36B37E;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  background: #fff;
+  padding: 8px 12px;
+  text-align: center;
+}
+
