--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,32 @@ li {
   padding: 0;
 }
 
+.cate > li {
+  border-radius: 4px;
+  background-color: #ebf0ee;
+  padding: 8px 16px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #3a4a42;
+}
+
+.list-about > li {
+  color: #36b37e;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  background: #fff;
+  padding: 8px 12px;
+  text-align: center;
+}
+
 #div-links li {
   display: flex;
   flex: 1;
@@ -140,14 +166,14 @@ li {
   font-size: 40px;
   line-height: 52px;
   text-align: center;
-  color: #172B4D;
+  color: #172b4d;
   margin-bottom: 20px;
 }
 
 .work-hr {
   width: 48px;
   height: 4px;
-  background: #36B37E;
+  background: #36b37e;
   border-radius: 24px;
   margin-bottom: 62px;
 }
@@ -167,7 +193,7 @@ li {
 .img-holder {
   width: 100%;
   height: 53%;
-  background: #EBF0EE;
+  background: #ebf0ee;
 }
 
 .text3 {
@@ -177,8 +203,9 @@ li {
   line-height: 32px;
   text-align: center;
   margin-bottom: 0;
-  color: #3A4A42;
+  color: #3a4a42;
 }
+
 .cate {
   display: flex;
   justify-content: space-around;
@@ -188,21 +215,8 @@ li {
   width: 100%;
 }
 
-.cate li{
-  border-radius: 4px;
-  background-color: #EBF0EE;
-  padding: 8px 16px;
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  color: #3A4A42;
-}
-
 .button-flex {
-  background: #36B37F;
+  background: #36b37f;
   color: #fff;
   width: 122px;
   height: 48px;
@@ -245,13 +259,13 @@ li {
 
 .h2-about {
   display: block;
-  font-family: 'Inter',sans-serif;
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
   text-align: center;
-  color: #172B4D;
+  color: #172b4d;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -259,21 +273,21 @@ li {
 }
 
 .p-about {
-  font-family: 'Inter',sans-serif;
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 32px;
   text-align: center;
-  color: #42526E;
+  color: #42526e;
   margin-bottom: 10px;
   flex: none;
 }
 
-.button-about{
+.button-about {
   width: 159px;
   height: 48px;
-  background: #36B37F;
+  background: #36b37f;
   border-radius: 4px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
@@ -281,7 +295,7 @@ li {
   font-size: 17px;
   line-height: 24px;
   letter-spacing: 0.03em;
-  color: #FFFFFF;
+  color: #fff;
   border: none;
   flex: none;
   margin-top: 20px;
@@ -306,7 +320,7 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: #EBF0EE;
+  background: #ebf0ee;
   border-radius: 8px;
 }
 
@@ -329,17 +343,3 @@ li {
   justify-content: space-around;
   text-align: center;
 }
-
-.list-about li{
-  color: #36B37E;
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  background: #fff;
-  padding: 8px 12px;
-  text-align: center;
-}
-
