--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,7 @@ li {
   background: #fff;
   padding: 8px 12px;
   text-align: center;
+  border-radius: 4px;
 }
 
 #div-links li {
@@ -302,21 +303,24 @@ li {
 }
 
 .about-me-grid {
+  position: relative;
   display: grid;
   width: 100%;
   height: 1100px;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-columns: 85%;
-  margin-top: 30px;
   justify-content: center;
   row-gap: 20px;
-  margin-bottom: 20px;
+  align-items: center;
+  margin: 30px auto 20px auto;
 }
 
 .grid-item-about {
-  width: 327px;
+  width: min(327px, 80vw);
   height: 352px;
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
   flex-direction: column;
   justify-content: center;
   align-items: center;
