--- a/styles.css
+++ b/styles.css
@@ -347,3 +347,40 @@ li {
   justify-content: space-around;
   text-align: center;
 }
+
+.form-section {
+  position: relative;
+  width: 100%;
+  height: 200vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 85%;
+  height: 100vh;
+  box-sizing: border-box;
+}
+
+.h2-form {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  text-align: center;
+  color: #172B4D;  
+}
+.form input,
+#textarea {
+  width: 90%;
+  padding: 0 auto;
+  margin: 3px;
+  flex: 1;
+}
