--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ li {
   list-style: none;
 }
 
-#div-links {
+.div-links {
   margin-top: 20%;
   flex: 1;
   justify-content: center;
@@ -93,9 +93,10 @@ li {
   display: flex;
   align-items: flex-start;
   margin-bottom: 30px;
+  max-height: 50px;
 }
 
-#div-links ul {
+.div-links ul {
   width: 100%;
   display: flex;
   margin: 0;
@@ -129,12 +130,13 @@ li {
   border-radius: 4px;
 }
 
-#div-links li {
+.div-links li {
   display: flex;
   flex: 1;
   margin: 0;
   padding: 1;
   justify-content: center;
+  align-items: center;
 }
 
 .fa {
@@ -351,7 +353,7 @@ li {
 .form-section {
   position: relative;
   width: 100%;
-  height: 200vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -377,12 +379,12 @@ li {
   text-align: center;
   color: #172B4D;  
 }
+
 .form input,
 #textarea {
   width: 90%;
-  padding: 0 auto;
   flex: 1;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -396,13 +398,48 @@ li {
 
 #user-name,
 #user-email {
-  
+  max-height: 30px;
   color: #6B778C;
-
 }
 
 #textarea {
   color: #091E42;
   padding: 12px;
   height: 114px;
+}
+
+#submit {
+  padding: 12px;
+  gap: 10px;
+  width: 129px;
+  max-height: 48px;
+  background: #36B37F;
+  border-radius: 4px;    
+  color: #fff;
+  margin-bottom: 50px;
+}
+
+.contact-ill {
+  position:relative;
+  top: -50%;
+  right:-42vw;
+}
+
+.last-link {
+  display: flex;
+  /*justify-content: flex-start;*/
+  height: 20px;
+  flex: 1 1 20px;
+  padding: 0;
+  margin: 0 auto;
+}
+
+.last-email {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  color: #42526E; 
 }
