--- a/styles.css
+++ b/styles.css
@@ -358,6 +358,10 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: url(/illustration-contact-form.svg);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-position-y: 860px;
 }
 
 .form {
@@ -406,6 +410,7 @@ li {
   color: #091E42;
   padding: 12px;
   height: 114px;
+  border: 1px solid #60C095;
 }
 
 #submit {
@@ -442,4 +447,8 @@ li {
   line-height: 32px;
   text-align: center;
   color: #42526E; 
+}
+
+footer {
+  margin-bottom: 250px;
 }
