--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url("header-illsutration-mobile.svg") no-repeat;
+  background: url("Images/header-illsutration-mobile.svg") no-repeat;
   background-size: 100% 100%;
   display: flex;
   flex-direction: column;
@@ -358,7 +358,7 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(illustration-contact-form.svg);
+  background-image: url(Images/illustration-contact-form.svg);
   background-repeat: no-repeat;
   background-position: right;
   background-position-y: 68%;
@@ -423,6 +423,22 @@ li {
   border-radius: 4px;
   color: #fff;
   margin-bottom: 50px;
+  border: none;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.button-h:hover {
+  box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
+}
+
+.button-h:active {
+  background:#008552;
 }
 
 .contact-ill {
@@ -433,8 +449,6 @@ li {
 
 .last-link {
   display: flex;
-
-  /* justify-content: flex-start; */
   height: 20px;
   flex: 1 1 20px;
   padding: 0;
