--- a/styles.css
+++ b/styles.css
@@ -434,11 +434,11 @@ li {
 }
 
 .button-h:hover {
-  box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
+  box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
 }
 
 .button-h:active {
-  background:#008552;
+  background: #008552;
 }
 
 .contact-ill {
