--- a/styles.css
+++ b/styles.css
@@ -468,3 +468,51 @@ li {
 footer {
   margin-bottom: 250px;
 }
+
+.desktop {
+  display:none;
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  top: 0;
+  left: 0;
+}
+
+@media  screen and (min-width:768px) {
+  .mobile {
+    display: none;
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0; 
+  }
+
+  .desktop {
+    display: flex;
+  }
+
+  #nav-bar {
+    display: flex;
+    justify-content: center;
+  }
+
+  .ul-nav {
+    top: unset;
+    left: unset;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .ul-nav a {
+    text-decoration: none;
+    color: #172B4D;
+    font-weight: 800;
+  }
+
+  .ul-nav li {
+    margin: 0 20px;
+    font-family: 'Inter', sans-serif;
+  }
+}
