add transition to buttons

--- a/styles.css
+++ b/styles.css
@@ -438,6 +438,9 @@ li {
 
 .button-h:hover {
   box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
+  transform: scale(1.2);
+  
+  transition-timing-function: ease-out;
 }
 
 .button-h:active {
@@ -682,6 +685,7 @@ footer {
 
   .button-about {
     margin-bottom: 50px;
+    transition-duration: 0.2s;
   }
 
   .form-section {
@@ -707,6 +711,7 @@ footer {
   .button-form {
     align-self: flex-start;
     margin-left: 1vw;
+    transition-duration: 0.2s;
   }
 
   .hr-footer {
