--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ li {
   display: flex;
   flex: 1;
   margin: 0;
-  padding: 1;
+  padding: 1px;
   justify-content: center;
   align-items: center;
 }
