--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,50 @@ body {
   height: 28px;
 }
 
+.modal-menu {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  height: 24px;
+  left: 0px;
+  right: 68px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 44px;
+  z-index: -2;
+  opacity: 0;
+  list-style: none;
+  overflow-y: hidden;
+}
+
+.modal-menu a,
+.modal-menu ul>li {
+  text-decoration: none;
+  color: #3A4A42;
+  margin-bottom: 30px;
+}
+
+.modal-ul {
+  position: relative;
+  top:-13px ;
+}
+
+.modal-img {
+  position: relative;
+  right: -85vw;
+  top: 18px;
+}
+
+.modal-show {
+  z-index: 10;
+  opacity: 1;
+  background: #fff;
+  width: 100vw;
+  height: 100vh;
+}
+
 #content {
   margin-top: 20%;
   display: flex;
@@ -311,7 +355,7 @@ li {
   position: relative;
   display: grid;
   width: 100%;
-  height: 1100px;
+  height: 1170px;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-columns: 85%;
   justify-content: center;
