--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
   flex: 2 1 100px;
 }
 
-#nav-bar {
+.nav-bar {
   margin: 0 5%;
   align-self: flex-start;
   width: 85%;
@@ -267,6 +267,104 @@ li {
   padding: 0;
   text-align: center;
   width: 100%;
+}
+
+.popup-window {
+  width: 0;
+  height: 0;
+  position: fixed;
+  display: flex;
+  justify-content:center;
+  top:0;
+  left: 0;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 44px;
+  z-index: -3;
+  opacity: 0;
+  padding: 0;
+  overflow-y:scroll;
+}
+
+.popup-show {
+  z-index: 100;
+  opacity: 1;
+  background: #C1C7D0;;
+  width: 100%;
+  height: auto;
+  position: absolute;
+}
+
+.div-popup {
+  background: #fff;
+  height: auto;
+  width: 85%;
+  margin: 16px auto;
+  border: 1px solid #DFE1E6;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 16px;
+  overflow-y: auto;
+}
+
+#enabled2 {
+  position: relative;
+  left: 82%;
+  top: 5%;
+  z-index: 3;
+}
+
+.img-holder2 {
+  max-width: 90%;
+  height: auto;
+  margin: 0 auto;
+}
+
+.text3p {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 44px; 
+  color: #172B4D;
+}
+
+.popup-p {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #344563;
+}
+
+.button-flex2 {
+  background: #28865f;
+  color: #fff;
+  width: 141px;
+  height: 48px;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  border-radius: 4px;
+  border: none;
+  margin-top: 10px;
+  font-size: 17px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+ 
+}
+
+.div-buttons {
+  width: 100%;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
 }
 
 .button-flex {
@@ -566,7 +664,7 @@ footer {
     z-index: 10;
   }
 
-  #nav-bar {
+  .nav-bar {
     position: absolute;
     top: 0;
     display: flex;
@@ -681,6 +779,7 @@ footer {
     max-height: 474px;
     transition-property: all;
     transition-duration: 0.5s;
+    padding-bottom: 10px;
   }
 
   .about-me-section {
@@ -788,4 +887,84 @@ footer {
   .grid-item:hover {
     transform: translateY(-10px);
   }
+  .popup-window {
+    width: 0;
+    height: 0;
+    position: fixed;
+    display: flex;
+    justify-content:center;
+    top:0;
+    left: 0;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 44px;
+    z-index: -3;
+    opacity: 0;
+    padding: 0;
+    overflow-y:scroll;
+  }
+  
+  .popup-show {
+    z-index: 100;
+    opacity: 1;
+    background: #C1C7D0;;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+  }
+  
+  .div-popup {
+    height: 1083px;
+    width: 920px;
+  }
+  
+  #enabled3 {
+    position: relative;
+    left: 96%;
+  }
+  
+  .text3 {
+    display: inline;
+  }
+  
+  .div-text-and-buttons {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+  .div-buttons-popup {
+    display: flex;
+    gap: 12px;
+    margin-top: 17px;
+  }
+  
+  .cate2 > li {
+    border-radius: 4px;
+    background-color: #ebf0ee;
+    padding: 8px 16px;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #3a4a42;
+    margin-right: 10px;
+  }
+  
+  .cate2 {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 10px;
+    padding: 0;
+    text-align: center;
+    width: 100%;
+  }
+
+  .img-holder2 {
+    max-width: 100%;
+  }
 }
+
