--- a/styles.css
+++ b/styles.css
@@ -291,10 +291,10 @@ li {
 .popup-show {
   z-index: 100;
   opacity: 1;
-  background: #c1c7d0;
+  background: rgba(193, 199, 208, 0.8);
   width: 100%;
-  height: auto;
-  position: absolute;
+  height: 100%;
+  position: fixed;
 }
 
 .div-popup {
@@ -909,7 +909,7 @@ footer {
   .popup-show {
     z-index: 100;
     opacity: 1;
-    background: #c1c7d0;
+    background: rgba(193, 199, 208, 0.8);
     width: 100%;
     height: 100%;
     position: fixed;
