--- a/styles.css
+++ b/styles.css
@@ -751,6 +751,25 @@ footer {
   .work-section-button {
     position: relative;
     top: -25vh;
+    text-align: center;
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+  }
+
+  .work-section-button > a {
+    display: flex;
+    align-items: center;
+  }
+
+  .work-section-button > a > img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .work-section-button:hover {
+    transform: scale(1.5);
+    box-shadow: 0 0 50px 0 #008552;
   }
 
   .a2 {
