--- a/styles.css
+++ b/styles.css
@@ -315,7 +315,7 @@ li {
 #enabled2 {
   position: relative;
   left: 82%;
-  top: 5%;
+  top: 0%;
   z-index: 3;
 }
 
@@ -345,18 +345,22 @@ li {
 
 .button-flex2 {
   background: #28865f;
-  color: #fff;
   width: 141px;
   height: 48px;
-  font-family: 'Inter', sans-serif;
-  font-weight: 500;
   border-radius: 4px;
   border: none;
   margin-top: 10px;
-  font-size: 17px;
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+
+.button-flex2 > a {
+  color: #fff;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 17px;
+  text-decoration: none;
 }
 
 .div-buttons {
